Dynamic-access coverage for aj.org.objectweb.asm.Constants (153/157)